--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     width: 100%;
     height: 166px;
     display: flex;
-align-items: center;
+    align-items: center;
     flex-direction: row;
     justify-content: center;
 }
@@ -15,4 +15,77 @@ align-items: center;
 .title-header {
     color: #fff;
     font-size: 48px;
+}
+
+.content{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 69px;
+}
+
+.main{
+    background-color: white;
+    width: 68%;
+}
+
+.row-1{
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.column-1 {
+    background-color: #C4C4C4;
+    width: 32%;
+    height: 228px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.column-4{
+    width: 66%;
+    margin-top: 20px;
+ 
+}
+
+.column-5{
+    margin-top: 20px;
+}
+
+.column-6{
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.side{
+    background-color: #C4C4C4;
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+
+}
+.korsel {
+    background-color: rgb(255, 0, 0);
+    width: 96%;
+    height: 500px;
+    margin-top: 50px;
+    margin-left: 25px;
+    margin-right: 25px;
+}
+
+.image {
+    height: 500px;
+    width: 100%;
+}
+
+.jarak-carousel{
+    margin-top: 38px;
+}
+
+.body-content{
+    padding: 0 25px;
 }
